SQ-1541: IDA 3.6 & Java 9 option for Tomcat